# CppTaskAppPortgres

./: CMakeLists.txt  README.md
src/: consolepainter.cpp  consolepainter.h  main.cpp  taskmanager.cpp  taskmanager.h  taskmanagerui.cpp  taskmanagerui.h
